<resources>
    <string name="app_name">yown</string>
    <string name="action_sell">Sell</string>
    <string name="msg_item_picture">picture of item</string>
    <string name="title_edit_item">Edit item</string>
    <string name="title_settings">Settings</string>
    <string name="title_sorting">Use advanced sorting</string>
    <string name="title_lv_edit_title">Add title</string>
    <string name="title_lv_edit_image">Add image</string>
    <string name="title_lv_edit_category">Add category</string>
    <string name="title_lv_edit_description">Add description</string>
    <string name="msg_item_used">indicator of usage</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_list">list</string>
    <string name="menu_item_dispose">dispose</string>
    <string name="menu_item_save">save</string>
    <string name="menu_item_delete">delete</string>
    <string name="subtitle_lv_add_image">Take image with camera</string>
    <string name="dialog_details_hint">Set details…</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="menu_item_how_to">How To</string>
    <string name="menu_item_nfc">NFC</string>
    <string name="title_debugging">Enable debugging</string>
    <string name="title_reset_all">Reset all data</string>
    <string name="title_how_to">How To</string>
    <string name="category_1">university</string>
    <string name="category_0">home</string>
    <string name="category_2">work</string>
    <string name="category_3">misc</string>
</resources>
