<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_item_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_nfc"
        android:icon="@drawable/ic_nfc_white_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_item_nfc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_menu_done"
        android:icon="@drawable/ic_done_white_24dp"
        android:orderInCategory="3"
        android:title="@string/menu_item_save"
        app:showAsAction="ifRoom" />
</menu>
